state_promise/inventory_system/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: inventory-system
  labels:
    pass.subject: inventory-system
spec:
  restartPolicy: Always

  containers:
    - name: subject-behavior
      image: inventory_system:latest
      imagePullPolicy: Never
      command: ["python", "/app/behavior.py"]

    - name: input-pool
      image: input_pool:latest
      imagePullPolicy: Never
      command: ["input-pool"]

      ports:
        - containerPort: 8081
        - containerPort: 8080
