state_promise/inventory_system/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-system
spec:
  selector:
    pass.subject: inventory-system
  ports:
    - name: input-pool
      port: 8080
      targetPort: 8080
