state_promise/inventory_system/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-system-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /messages
spec:
  rules:
    - http:
        paths:
          - path: /inventory-system
            pathType: Prefix
            backend:
              service:
                name: inventory-system
                port:
                  number: 8080
